logs/ksc-sdk-python.log
Listing '.'...
Listing './bin'...
Compiling './bin/jp.py'...
Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/eip.py'...
***   File "./lib/python3.5/site-packages/examples/eip.py", line 29
    print item['PublicIp']
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/kec.py'...
***   File "./lib/python3.5/site-packages/examples/kec.py", line 10
    print client.describe_instances()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/kvs.py'...
***   File "./lib/python3.5/site-packages/examples/kvs.py", line 44
    print json.dumps(res)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/monitor.py'...
***   File "./lib/python3.5/site-packages/examples/monitor.py", line 21
    print json.dumps(m,sort_keys=True,indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/offline.py'...
***   File "./lib/python3.5/site-packages/examples/offline.py", line 44
    print json.dumps(res)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/slb.py'...
***   File "./lib/python3.5/site-packages/examples/slb.py", line 28
    print item['ListenerName']
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/tag.py'...
***   File "./lib/python3.5/site-packages/examples/tag.py", line 11
    print client.describe_tags()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jmespath'...
Listing './lib/python3.5/site-packages/jmespath-0.9.3.dist-info'...
Listing './lib/python3.5/site-packages/ksc_sdk_python-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/kscore'...
Listing './lib/python3.5/site-packages/kscore/data'...
Listing './lib/python3.5/site-packages/kscore/data/cdn'...
Listing './lib/python3.5/site-packages/kscore/data/cdn/2016-09-01'...
Listing './lib/python3.5/site-packages/kscore/data/eip'...
Listing './lib/python3.5/site-packages/kscore/data/eip/2016-03-04'...
Listing './lib/python3.5/site-packages/kscore/data/iam'...
Listing './lib/python3.5/site-packages/kscore/data/iam/2015-11-01'...
Listing './lib/python3.5/site-packages/kscore/data/kcs'...
Listing './lib/python3.5/site-packages/kscore/data/kcs/2016-07-01'...
Listing './lib/python3.5/site-packages/kscore/data/kec'...
Listing './lib/python3.5/site-packages/kscore/data/kec/2016-03-04'...
Listing './lib/python3.5/site-packages/kscore/data/kog'...
Listing './lib/python3.5/site-packages/kscore/data/kog/2016-08-08'...
Listing './lib/python3.5/site-packages/kscore/data/kvs'...
Listing './lib/python3.5/site-packages/kscore/data/kvs/2017-01-01'...
Listing './lib/python3.5/site-packages/kscore/data/monitor'...
Listing './lib/python3.5/site-packages/kscore/data/monitor/2010-05-25'...
Listing './lib/python3.5/site-packages/kscore/data/offline'...
Listing './lib/python3.5/site-packages/kscore/data/offline/2016-09-19'...
Listing './lib/python3.5/site-packages/kscore/data/slb'...
Listing './lib/python3.5/site-packages/kscore/data/slb/2016-03-04'...
Listing './lib/python3.5/site-packages/kscore/data/tag'...
Listing './lib/python3.5/site-packages/kscore/data/tag/2016-03-04'...
Listing './lib/python3.5/site-packages/kscore/data/vpc'...
Listing './lib/python3.5/site-packages/kscore/data/vpc/2016-03-04'...
Listing './lib/python3.5/site-packages/kscore/docs'...
Listing './lib/python3.5/site-packages/kscore/docs/bcdoc'...
Listing './lib/python3.5/site-packages/kscore/vendored'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/kscore/vendored/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
